<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/productList">

    <fragment
        android:id="@+id/loginFragment"
        android:name="school.cactus.succulentshop.auth.login.LoginFragment"
        android:label="@string/log_in"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_signUpFragment"
            app:destination="@id/signUpFragment" />

    </fragment>

    <fragment
        android:id="@+id/signUpFragment"
        android:name="school.cactus.succulentshop.auth.signup.SignUpFragment"
        android:label="@string/sign_up"
        tools:layout="@layout/fragment_signup">

    </fragment>

    <fragment
        android:id="@+id/productList"
        android:name="school.cactus.succulentshop.product.list.ProductListFragment"
        android:label="@string/product_list"
        tools:layout="@layout/fragment_product_list">
        <action
            android:id="@+id/action_productList_to_productDetailFragment"
            app:destination="@id/productDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/productDetailFragment"
        android:name="school.cactus.succulentshop.product.detail.ProductDetailFragment"
        android:label="@string/product_detail"
        tools:layout="@layout/fragment_product_detail">
        <argument
            android:name="productId"
            android:defaultValue="-1"
            app:argType="integer" />
        <action
            android:id="@+id/action_productDetailFragment_self"
            app:destination="@id/productDetailFragment" />
    </fragment>

</navigation>